--- a/src/assets/styles/navbar.sass
+++ b/src/assets/styles/navbar.sass
@@ -2,7 +2,7 @@
 
 
 .navbar-container
-    padding: 40px 150px
+    padding: 40px 125px
     display: flex
     position: sticky
     justify-content: center
@@ -31,16 +31,16 @@
         position: relative
         transition: 0.15s linear
         &::after
-            content: '';
-            display: block;
-            position: absolute;
+            content: ''
+            display: block
+            position: absolute
             background: $softest-pink
             bottom: -10px
-            width: 5px;
-            height: 5px;
-            border-radius: 6px;
-            transition: all 0.15s linear;
-            opacity: 0;
+            width: 5px
+            height: 5px
+            border-radius: 6px
+            transition: all 0.15s linear
+            opacity: 0
         &:hover::after
             opacity: 1
         &.menulink-active::after
@@ -53,7 +53,12 @@
         border-radius: 100%
         opacity: 0.6
 
-
-
+@media ( max-width: 560px )
+    .menu
+        gap: 20px
+    
+@media ( max-width: 350px )
+    .menu
+        gap: 10px
     
     
